# otgraph

./: LICENSE  README.md  conda_env.yaml  probe_stag.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/otgraph/: __init__.py  admksolver.py  graphs.py  interiorpointsolver.py  petsc_utils.py  problems.py
tests/: test_dmstag.py  test_eikonal.py  test_nest.py  test_solver.py
