[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3"]
build-backend = "setuptools.build_meta"

[project]
name = "otpgraph"
version = "0.0.1"
description = "Solver of Optimal Transport Problem of Graphs"
authors = [
  { name="Enrico Facca", email="enrico.facca@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2",
    "numpy==2.2.1",
    "scipy==1.15.3",
    "sympy==1.12.0",
    "mpi4py==4.0.3",
    "petsc==3.19.0",
    "petsc4py==3.19.0",
]

[project.optional-dependencies]
testing = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "mypy>=0.910",
    "flake8>=3.9",
    "tox>=3.24",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=otgraph"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.flake8]
max-line-length = 160
ignore = [
  "E203",
  "E266",
  "W503",
  "W505",
  "E701",
  "E704",
]
