[metadata]
name = otpgraph
description = Solver of Optimal Transport Problem of Graphs
author = Enrico Facca
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    otgraph
install_requires =
    requests>=2
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160
ignore =
  # E203 whitespace before ':'
  E203,
  # E266 too many leading '#' for block comment
  E266,
  # W503: line break before binary operator
  W503,
  # allow to use \dot
  W605
  # Multiple statements on each line - this conflicts with black's preferences
  E701
  E704